--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="rotatePopup">
-    📱 Please rotate your phone to <b>landscape</b> for the best experience!
+    Please rotate your phone to landscape for the best experience!
   </div>
 
   <!-- Wrap heading + input inside a container -->
@@ -31,4 +31,5 @@
 </body>
 
 </html>
+
 
